# bazel

./: .gitignore
..bfg-report/2025-11-24/22-03-32/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
learn-bazel/: BUILD  MODULE.bazel  WORKSPACE
learn-bazel/bazel-bin/: my_java_app.exe-0.params  my_java_app.exe.repo_mapping  my_java_app.exe.runfiles_manifest  my_java_app.jar-0.params  my_java_app.jar_manifest_proto  my_java_app.jdeps
learn-bazel/bazel-learn-bazel/bazel-out/: volatile-status.txt
learn-bazel/bazel-out/: stable-status.txt
learn-bazel/my-local-module/: MODULE.bazel
